Added wine summary list and wine details page

--- a/src/app/components/details.component.html
+++ b/src/app/components/details.component.html
@@ -1,1 +1,23 @@
-<p>details works!</p>
+<div class="row">
+    <div class="col">
+        <span>Details of wine with ID: <em>{{_id}}</em></span>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        _id: {{wineDetails._id}}<br>
+        title: {{wineDetails.title}}<br>
+        description: {{wineDetails.description}}<br>
+        designation: {{wineDetails.designation}}<br>
+        variety: {{wineDetails.variety}}<br>
+        country: {{wineDetails.country}}<br>
+        province: {{wineDetails.province}}<br>
+        region_1: {{wineDetails.region_1}}<br>
+        region_2: {{wineDetails.region_2}}<br>
+        winery: {{wineDetails.winery}}<br>
+        price: {{wineDetails.price}}<br>
+        taster_name: {{wineDetails.taster_name}}<br>
+        taster_twitter_handle: {{wineDetails.taster_twitter_handle}}<br>
+        points: {{wineDetails.points}}
+    </div>
+</div>
