--- a/src/app/components/list.component.html
+++ b/src/app/components/list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
     <ul>
-        <li *ngFor="let c of countryList"><a [routerLink]="['/country',c]">{{c}}</a></li>
+        <li *ngFor="let c of countryList"><a [routerLink]="['/country',c]" [queryParams]="{limit:30, offset:0}">{{c}}</a></li>
     </ul>
 </div>
