Include alternative proxy-config file

--- a/src/app/components/list.component.html
+++ b/src/app/components/list.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+    <span>Country listing</span>
     <ul>
         <li *ngFor="let c of countryList"><a [routerLink]="['/country',c]" [queryParams]="{limit:30, offset:0}">{{c}}</a></li>
     </ul>
